--- a/gitops-config/deployment.yaml
+++ b/gitops-config/deployment.yaml
@@ -22,20 +22,20 @@ spec:
         name: gitops-demo
         resources: {}
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
   creationTimestamp: null
   labels:
     app: gitops-demo
-  name: gitops-demo
+  name: lb-gitops-demo
 spec:
   ports:
-  - name: app-ports
-    port: 8080
+  - port: 8080
     protocol: TCP
     targetPort: 8080
   selector:
     app: gitops-demo
-  type: NodePort
+  type: LoadBalancer
+status:
+  loadBalancer: {}
